--- a/html/css/style.css
+++ b/html/css/style.css
@@ -187,7 +187,7 @@ h3 {
   font-size: 2.25em;
 }
 .sect-descrip {
-  margin: 35px 0 25px;
+  margin: 25px 0 25px;
   text-align: center;
   font-weight: 400;
   font-size: 1em;
@@ -250,6 +250,351 @@ h3 {
   background: #f5f5f5;
 }
 .concept-img {
+  position: relative;
+  height: 143px;
   margin: 28px 0 0 25px;
   text-align: center;
+}
+.concept-img img {
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.concept-img .arrow {
+  position: absolute;
+  left: 228px;
+  top: 5px;
+}
+.concept-img .bulb-wrap {
+  position: absolute;
+  left: 164px;
+  top: 43px;
+  cursor: pointer;
+}
+.concept-img .bulb-wrap .bulb {
+  position: absolute;
+}
+.concept-img .bulb-wrap .bulb.hover {
+  opacity: 0;
+}
+.concept-img .bulb-wrap:hover .bulb {
+  opacity: 0;
+}
+.concept-img .bulb-wrap:hover .bulb.hover {
+  opacity: 1;
+}
+.concept-img .konzept-wrap {
+  position: absolute;
+  left: 492px;
+  top: 7px;
+  cursor: pointer;
+}
+.concept-img .konzept-wrap .konzept {
+  position: absolute;
+}
+.concept-img .konzept-wrap .konzept.hover {
+  opacity: 0;
+}
+.concept-img .konzept-wrap:hover .konzept {
+  opacity: 0;
+}
+.concept-img .konzept-wrap:hover .konzept.hover {
+  opacity: 1;
+}
+.concept-img .puzzle-wrap {
+  position: absolute;
+  left: 720px;
+  top: 0;
+  cursor: pointer;
+}
+.concept-img .puzzle-wrap .puzzle {
+  position: absolute;
+}
+.concept-img .puzzle-wrap .puzzle.hover {
+  opacity: 0;
+}
+.concept-img .puzzle-wrap:hover .puzzle {
+  opacity: 0;
+}
+.concept-img .puzzle-wrap:hover .puzzle.hover {
+  opacity: 1;
+}
+.concept-blocks-wrap {
+  position: relative;
+  margin: 35px 0 0;
+}
+.concept-block {
+  display: inline-block;
+  width: 16%;
+  box-sizing: border-box;
+  float: left;
+  vertical-align: top;
+  padding: 3px 8px 8px;
+  font-weight: 300;
+  color: #ffffff;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  font-size: 0.6875em;
+}
+.concept-block .line {
+  position: absolute;
+  height: 20px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.concept-block .line span {
+  position: absolute;
+  top: -7px;
+  right: -34px;
+  width: 0;
+  height: 0;
+  border-top: 18px solid transparent;
+  border-left: 32px solid #4a4a4a;
+  border-bottom: 18px solid transparent;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.concept-block .title {
+  width: 120%;
+  font-weight: 600;
+  margin: 0 0 0.4em;
+  text-transform: uppercase;
+}
+.concept-block:nth-child(1) {
+  background: #4a4a4a;
+}
+.concept-block:nth-child(1) .line {
+  width: 81%;
+  left: 16%;
+  background: #4a4a4a;
+}
+.concept-block:nth-child(1) .line span {
+  border-left: 34px solid #4a4a4a;
+}
+.concept-block:nth-child(2) {
+  background: #515151;
+  margin-top: 20px;
+}
+.concept-block:nth-child(2) .line {
+  width: 62%;
+  left: 32%;
+  top: 20px;
+  background: #515151;
+}
+.concept-block:nth-child(2) .line span {
+  border-left: 34px solid #515151;
+}
+.concept-block:nth-child(3) {
+  background: #5a5a5a;
+  margin-top: 40px;
+}
+.concept-block:nth-child(3) .line {
+  width: 43%;
+  left: 48%;
+  top: 40px;
+  background: #5a5a5a;
+}
+.concept-block:nth-child(3) .line span {
+  border-left: 34px solid #5a5a5a;
+}
+.concept-block:nth-child(4) {
+  background: #676767;
+  margin-top: 60px;
+}
+.concept-block:nth-child(4) .line {
+  width: 24%;
+  left: 64%;
+  top: 60px;
+  background: #676767;
+}
+.concept-block:nth-child(4) .line span {
+  border-left: 34px solid #676767;
+}
+.concept-block:nth-child(5) {
+  background: #757575;
+  margin-top: 80px;
+}
+.concept-block:nth-child(5) .line {
+  width: 5.1%;
+  left: 79.9%;
+  top: 80px;
+  background: #757575;
+}
+.concept-block:nth-child(5) .line span {
+  border-left: 34px solid #757575;
+}
+.concept-block.hover:nth-child(1) {
+  background: #e84c3d;
+}
+.concept-block.hover:nth-child(1) .line {
+  background: #e84c3d;
+}
+.concept-block.hover:nth-child(1) .line span {
+  border-left-color: #e84c3d;
+}
+.concept-block.hover:nth-child(2) {
+  background: #fe5343;
+}
+.concept-block.hover:nth-child(2) .line {
+  background: #fe5343;
+}
+.concept-block.hover:nth-child(2) .line span {
+  border-left-color: #fe5343;
+}
+.concept-block.hover:nth-child(3) {
+  background: #fe6657;
+}
+.concept-block.hover:nth-child(3) .line {
+  background: #fe6657;
+}
+.concept-block.hover:nth-child(3) .line span {
+  border-left-color: #fe6657;
+}
+.concept-block.hover:nth-child(4) {
+  background: #fe7367;
+}
+.concept-block.hover:nth-child(4) .line {
+  background: #fe7367;
+}
+.concept-block.hover:nth-child(4) .line span {
+  border-left-color: #fe7367;
+}
+.concept-block.hover:nth-child(5) {
+  background: #fe867b;
+}
+.concept-block.hover:nth-child(5) .line {
+  background: #fe867b;
+}
+.concept-block.hover:nth-child(5) .line span {
+  border-left-color: #fe867b;
+}
+.crewmans-wrap {
+  margin: 70px -2% 0;
+}
+.crewman-block {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 28.3%;
+  margin: 0 2.5%;
+  padding: 0 3.25%;
+  float: left;
+  text-decoration: none;
+}
+.crewman-block .photo-wrap {
+  display: block;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  margin: 0 0 30px;
+}
+.crewman-block .photo-wrap img {
+  display: inline-block;
+  vertical-align: top;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.crewman-block .photo-wrap .bg {
+  position: absolute;
+  content: '';
+  z-index: 22;
+  opacity: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(220, 220, 220, 0.5);
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.crewman-block .title {
+  display: block;
+  margin: 0 0 0.2em;
+  font-size: 1.25em;
+  color: #343434;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+}
+.crewman-block .subtitle {
+  display: block;
+  margin: 0 0 1.7em;
+  font-size: 0.8125em;
+  color: #666666;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.crewman-block .section {
+  display: block;
+  margin: 0 0 1.2em;
+  color: #666666;
+  font-size: 0.8125em;
+  line-height: 1.38;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.crewman-block .section i {
+  display: block;
+  font-style: normal;
+  text-transform: uppercase;
+}
+.crewman-block:hover .subtitle {
+  color: #343434;
+}
+.crewman-block:hover .section {
+  color: #343434;
+}
+.crewman-block:hover .photo-wrap img {
+  -ms-transform: scale(1.15);
+  /* IE 9 */
+
+  -webkit-transform: scale(1.15);
+  /* Chrome, Safari, Opera */
+
+  transform: scale(1.15);
+}
+.crewman-block.light .section {
+  color: #999999;
+}
+.crewman-block.light .photo-wrap .bg {
+  opacity: 1;
+}
+.contact-sect {
+  background: url(../img/contacts-bg.jpg) center center no-repeat;
+}
+.contact-sect h3 {
+  color: #ffffff;
+}
+.contact-sect .sect-descrip {
+  color: #ffffff;
+}
+.contact-sect .sect-title-line {
+  background: #ffffff;
 }
