--- a/html/css/style.css
+++ b/html/css/style.css
@@ -598,3 +598,134 @@ h3 {
 .contact-sect .sect-title-line {
   background: #ffffff;
 }
+.contact-wrap {
+  margin: 75px 0 0;
+}
+.contact-form {
+  display: inline-block;
+  float: left;
+  width: 48.7%;
+}
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #787878;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #787878;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #787878;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+input:hover::-webkit-input-placeholder,
+input:focus::-webkit-input-placeholder,
+textarea:hover::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder {
+  color: #ffffff;
+}
+input:hover:-moz-placeholder,
+input:focus:-moz-placeholder,
+textarea:hover:-moz-placeholder,
+textarea:focus:-moz-placeholder {
+  color: #ffffff;
+}
+input:hover:-ms-input-placeholder,
+input:focus:-ms-input-placeholder,
+textarea:hover:-ms-input-placeholder,
+textarea:focus:-ms-input-placeholder {
+  color: #ffffff;
+}
+.input {
+  box-sizing: border-box;
+  height: 50px;
+  padding: 15px 12px;
+  margin: 0 0 30px;
+  font-size: 1em;
+  font-weight: 300;
+  background: none;
+  border: 1px solid #666666;
+  border-radius: 0;
+  outline: none;
+  color: #787878;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.input:hover {
+  border-color: #e84c3d;
+  color: #ffffff;
+}
+.input:focus {
+  border-color: #e84c3d;
+  color: #ffffff;
+}
+.input-name {
+  width: 47.37%;
+  float: left;
+}
+.input-phone {
+  width: 47.37%;
+  float: right;
+}
+.input-email {
+  display: block;
+  width: 100%;
+}
+.input-message {
+  display: block;
+  width: 100%;
+  height: 185px;
+  resize: vertical;
+}
+.btn-send {
+  box-sizing: border-box;
+  height: 50px;
+  border: none;
+  background: #e84c3d;
+  color: #ffffff;
+  font-size: 0.75em;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 16px 48px;
+  outline: none;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.btn-send:hover {
+  color: #e84c3d;
+  background: #ffffff;
+}
+.btn-send:active {
+  color: #343434;
+  background: #757575;
+}
+.contact-info {
+  display: inline-block;
+  float: right;
+  width: 48.7%;
+  box-sizing: border-box;
+  padding: 25px 35px;
+  color: #ffffff;
+  background: rgba(245, 245, 245, 0.2);
+}
