--- a/html/css/style.less
+++ b/html/css/style.less
@@ -39,6 +39,11 @@
 @border-light: #dddddd;
 @bg-lighter: #fdfdfd;
 @crewnam-text: #666666;
+@input-border: #666666;
+@input-border-hover: #e84c3d;
+@input-color: #787878;
+@send-btn: #e84c3d;
+@send-btn-active: #757575;
 
 @concept-1: #4a4a4a;
 @concept-1-hover: #e84c3d;
@@ -658,4 +663,136 @@ h3 {
     .sect-title-line {
         background: @white;
     }
+}
+.contact-wrap {
+    margin: 75px 0 0;
+}
+.contact-form {
+    display: inline-block;
+    float: left;
+    width: 48.7%;
+}
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+    color: @input-color;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+    color: @input-color;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+    color: @input-color;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+input:hover::-webkit-input-placeholder,
+input:focus::-webkit-input-placeholder,
+textarea:hover::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder {
+    color: @white;
+}
+input:hover:-moz-placeholder,
+input:focus:-moz-placeholder,
+textarea:hover:-moz-placeholder,
+textarea:focus:-moz-placeholder {
+    color: @white;
+}
+input:hover:-ms-input-placeholder,
+input:focus:-ms-input-placeholder,
+textarea:hover:-ms-input-placeholder,
+textarea:focus:-ms-input-placeholder {
+    color: @white;
+}
+
+.input {
+    box-sizing: border-box;
+    height: 50px;
+    padding: 15px 12px;
+    margin: 0 0 30px;
+    .font-size(16, 16);
+    font-weight: 300;
+    background: none;
+    border: 1px solid @input-border;
+    border-radius: 0;
+    outline: none;
+    color: @input-color;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    &:hover {
+        border-color: @input-border-hover;
+        color: @white;
+    }
+    &:focus {
+        border-color: @input-border-hover;
+        color: @white;
+    }
+}
+.input-name {
+    width: 47.37%;
+    float: left;
+}
+.input-phone {
+    width: 47.37%;
+    float: right;
+}
+.input-email {
+    display: block;
+    width: 100%;
+}
+.input-message {
+    display: block;
+    width: 100%;
+    height: 185px;
+    resize: vertical;
+}
+.btn-send {
+    box-sizing: border-box;
+    height: 50px;
+    border: none;
+    background: @send-btn;
+    color: @white;
+    .font-size(12, 16);
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 16px 48px;
+    outline: none;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    &:hover {
+        color: @send-btn;
+        background: @white;
+    }
+    &:active {
+        color: @black;
+        background: @send-btn-active;
+    }
+}
+.contact-info {
+    display: inline-block;
+    float: right;
+    width: 48.7%;
+    box-sizing: border-box;
+    padding: 25px 35px;
+    color: @white;
+    background: rgba(245, 245, 245, 0.2);
 }
