--- a/html/css/style.css
+++ b/html/css/style.css
@@ -37,6 +37,10 @@ body {
   font-weight: 400;
   color: #343434;
 }
+.wrapper {
+  overflow: hidden;
+  min-width: 320px;
+}
 .container {
   max-width: 1170px;
   margin: auto;
@@ -48,6 +52,9 @@ header {
   text-align: center;
   color: #ffffff;
   background-image: url(../img/header_bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 header .container {
   position: relative;
@@ -1120,4 +1127,106 @@ footer {
 }
 .scrollTop:active i.active {
   opacity: 1;
+}
+/****  media  ****/
+@media (max-width: 1280px) {
+  .container {
+    padding: 0 15px;
+  }
+  .header-link {
+    right: 15px;
+  }
+}
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 4.5em;
+  }
+  header p {
+    font-size: 1.125em;
+  }
+  nav ul li {
+    margin-left: 30px;
+  }
+}
+@media (max-width: 960px) {
+  nav ul li {
+    margin-left: 18px;
+  }
+  nav ul li:first-child {
+    margin-left: 0;
+  }
+  nav ul li a {
+    font-size: 0.9375em;
+  }
+}
+@media (max-width: 768px) {
+  header p {
+    font-size: 1em;
+  }
+  h1 {
+    font-size: 3.5em;
+  }
+  h2 {
+    font-size: 0.9375em;
+  }
+  .navbar {
+    padding: 15px 0 0;
+  }
+  nav {
+    display: block;
+    float: none;
+    text-align: right;
+  }
+  nav ul li {
+    margin-left: 30px;
+  }
+  nav ul li:first-child {
+    display: block;
+    margin: 0 0 10px;
+  }
+  nav ul li:nth-child(2) {
+    margin-left: 0;
+  }
+  nav ul li a {
+    display: inline-block;
+    padding: 10px 0 12px;
+  }
+  .logo {
+    float: left;
+  }
+}
+@media (max-width: 640px) {
+  header p {
+    font-size: 0.875em;
+  }
+  h1 {
+    font-size: 2.75em;
+  }
+  h2 {
+    font-size: 0.875em;
+  }
+  .header-link {
+    bottom: 8px;
+    font-size: 0.875em;
+  }
+}
+@media (max-width: 540px) {
+  nav ul li {
+    margin-left: 15px;
+  }
+  nav ul li a {
+    font-size: 0.875em;
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    padding: 0 8px;
+  }
+  h1 {
+    line-height: 1;
+    margin: 0.2em 0 0.2em;
+  }
+}
+@media (max-width: 440px) {
+  
 }
