--- a/html/css/style.less
+++ b/html/css/style.less
@@ -80,7 +80,8 @@ body {
     color: @black;
 }
 .wrapper {
-
+    overflow: hidden;
+    min-width: 320px;
 }
 .container {
     max-width: 1170px;
@@ -94,6 +95,9 @@ header {
     text-align: center;
     color: @white;
     background-image: url(../img/header_bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     .container {
         position: relative;
         padding: 14.26% 0;
@@ -1180,4 +1184,131 @@ footer {
             }
         }
     }
+}
+
+
+
+/****  media  ****/
+@media (max-width: 1280px) {
+    .container {
+        padding: 0 15px;
+    }
+    .header-link {
+        right: 15px;
+    }
+}
+
+
+@media (max-width: 1024px) {
+    h1 {
+        .font-size(72, 16);
+    }
+    header {
+        p {
+            .font-size(18, 16);
+        }
+    }
+    nav {
+        ul {
+            li {
+                margin-left: 30px;
+            }
+        }
+    }
+}
+@media (max-width: 960px) {
+    nav {
+        ul {
+            li {
+                margin-left: 18px;
+                &:first-child {
+                    margin-left: 0;
+                }
+                a {
+                    .font-size(15, 16);
+                }
+            }
+        }
+    }
+}
+@media (max-width: 768px) {
+    header {
+        p {
+            .font-size(16, 16);
+        }
+    }
+    h1 {
+        .font-size(56, 16);
+    }
+    h2 {
+        .font-size(15, 16);
+    }
+    .navbar {
+        padding: 15px 0 0;
+    }
+    nav {
+        display: block;
+        float: none;
+        text-align: right;
+        ul {
+            li {
+                margin-left: 30px;
+                &:first-child {
+                    display: block;
+                    margin: 0 0 10px;
+                }
+                &:nth-child(2) {
+                    margin-left: 0;
+                }
+                a {
+                    display: inline-block;
+                    padding: 10px 0 12px;
+                }
+            }
+        }
+    }
+    .logo {
+        float: left;
+    }
+}
+@media (max-width: 640px) {
+    header {
+        p {
+            .font-size(14, 16);
+        }
+    }
+    h1 {
+        .font-size(44, 16);
+    }
+    h2 {
+        .font-size(14, 16);
+    }
+    .header-link {
+        bottom: 8px;
+        .font-size(14, 16);
+    }
+}
+@media (max-width: 540px) {
+    nav {
+        ul {
+            li {
+                margin-left: 15px;
+                a {
+                    .font-size(14, 16);
+                }
+            }
+        }
+    }
+}
+@media (max-width: 480px) {
+    .container {
+        padding: 0 8px;
+    }
+    h1 {
+        line-height: 1;
+        margin: 0.2em 0 0.2em;
+    }
+}
+@media (max-width: 440px) {
+    
 }
