--- a/html/css/style.css
+++ b/html/css/style.css
@@ -185,6 +185,10 @@ section {
 .swiper-container {
   width: 100%;
 }
+.swiper-slide img {
+  max-width: 100%;
+  width: 100%;
+}
 h3 {
   margin: 0;
   text-transform: uppercase;
@@ -273,6 +277,10 @@ h3 {
   position: absolute;
   left: 228px;
   top: 5px;
+}
+.concept-img .arrow-mobile {
+  display: none;
+  position: absolute;
 }
 .concept-img .bulb-wrap {
   position: absolute;
@@ -923,6 +931,7 @@ footer {
 .footer-block {
   display: inline-block;
   width: 18%;
+  float: left;
   margin: 0 0 0 2.13%;
   vertical-align: top;
   font-weight: 300;
@@ -1147,6 +1156,30 @@ footer {
   nav ul li {
     margin-left: 30px;
   }
+  .concept-img {
+    margin: 28px auto 0 auto;
+    width: 806px;
+  }
+  .concept-img .bulb-wrap {
+    left: 0;
+  }
+  .concept-img .arrow {
+    left: 55px;
+  }
+  .concept-img .konzept-wrap {
+    left: 320px;
+  }
+  .concept-img .puzzle-wrap {
+    left: 545px;
+  }
+  .crewman-block {
+    width: 28.3%;
+    margin: 0 2.5%;
+    padding: 0;
+  }
+  .crewman-block .photo-wrap img {
+    width: 100%;
+  }
 }
 @media (max-width: 960px) {
   nav ul li {
@@ -1157,6 +1190,32 @@ footer {
   }
   nav ul li a {
     font-size: 0.9375em;
+  }
+  section {
+    padding: 60px 0;
+  }
+  .competencies-block {
+    width: 45%;
+    margin: 0 2.5% 4%;
+  }
+  .concept-img {
+    width: 656px;
+    height: 170px;
+  }
+  .concept-img .bulb-wrap {
+    top: 57px;
+  }
+  .concept-img .arrow {
+    left: 41px;
+    width: 393px;
+    height: 164px;
+  }
+  .concept-img .konzept-wrap {
+    left: 221px;
+    top: 23px;
+  }
+  .concept-img .puzzle-wrap {
+    left: 395px;
   }
 }
 @media (max-width: 768px) {
@@ -1194,6 +1253,80 @@ footer {
   .logo {
     float: left;
   }
+  .first-slider-sect .slider {
+    display: block;
+    width: 100%;
+    margin: 0 0 5%;
+  }
+  .first-slider-sect .text {
+    display: block;
+    width: 100%;
+  }
+  .concept-block {
+    width: 28%;
+  }
+  .concept-block:nth-child(1) .line {
+    width: 69%;
+    left: 28%;
+  }
+  .concept-block:nth-child(2) .line {
+    width: 36%;
+    left: 56%;
+  }
+  .concept-block:nth-child(3) .line {
+    width: 3%;
+    left: 84%;
+  }
+  .concept-block:nth-child(4) {
+    margin-top: 15px;
+  }
+  .concept-block:nth-child(4) .line {
+    width: 60%;
+    left: 28%;
+    top: 415px;
+  }
+  .concept-block:nth-child(5) {
+    margin-top: 35px;
+  }
+  .concept-block:nth-child(5) .line {
+    width: 27%;
+    left: 56%;
+    top: 435px;
+  }
+  .contact-wrap {
+    margin: 60px 0 0;
+  }
+  .contact-form {
+    display: block;
+    float: none;
+    width: 85%;
+    margin: auto auto 55px;
+  }
+  .contact-info {
+    display: block;
+    float: none;
+    width: 85%;
+    margin: auto;
+  }
+  .btn-send {
+    display: block;
+    width: 50%;
+    height: 68px;
+    font-size: 1.125em;
+    padding: 20px;
+  }
+  footer .container:first-child {
+    text-align: center;
+  }
+  .footer-block {
+    width: 29%;
+    margin: 0 1.5% 3% 1.5% !important;
+    float: none;
+    text-align: left;
+  }
+  .footer-block:nth-child(4) {
+    margin-left: 0;
+  }
 }
 @media (max-width: 640px) {
   header p {
@@ -1208,6 +1341,104 @@ footer {
   .header-link {
     bottom: 8px;
     font-size: 0.875em;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    bottom: 6%;
+  }
+  .competencies-block {
+    display: block;
+    float: none;
+    width: 75%;
+    margin: 0 auto 45px;
+  }
+  .competencies-block span {
+    font-size: 0.9375em;
+    line-height: 1.6;
+  }
+  .concept-img {
+    width: 480px;
+    height: 305px;
+  }
+  .concept-img .bulb-wrap {
+    top: 187px;
+    left: 25px;
+  }
+  .concept-img .arrow {
+    display: none;
+  }
+  .concept-img .arrow-mobile {
+    display: block;
+    top: 130px;
+    left: 36px;
+  }
+  .concept-img .konzept-wrap {
+    left: 235px;
+    top: 152px;
+  }
+  .concept-img .puzzle-wrap {
+    left: 217px;
+  }
+  .concept-block {
+    width: 45%;
+    position: relative;
+  }
+  .concept-block:nth-child(3) {
+    margin-top: -20px;
+  }
+  .concept-block:nth-child(4) {
+    margin-top: 0;
+  }
+  .concept-block:nth-child(5) {
+    margin-top: -20px;
+  }
+  .concept-block .line {
+    width: 0 !important;
+    left: auto !important;
+    right: 5px !important;
+    top: 0 !important;
+  }
+  .concept-block .line span {
+    border-top-width: 20px;
+    border-bottom-width: 20px;
+    z-index: 1;
+  }
+  .crewman-block {
+    display: block;
+    float: none;
+    width: 75%;
+    margin: 65px auto 0;
+  }
+  .crewman-block:first-child {
+    margin-top: 0;
+  }
+  .crewman-block .title {
+    font-size: 1.5625em;
+  }
+  .crewman-block .subtitle {
+    font-size: 1.0625em;
+  }
+  .crewman-block .section {
+    font-size: 1em;
+  }
+  .contacts-link {
+    display: none;
+  }
+  .contact-info {
+    padding: 15px;
+  }
+  .footer-block {
+    width: 45%;
+    margin: 0 2% 4% !important;
+  }
+  .footer-block:nth-child(even) {
+    margin-right: 0 !important;
+  }
+  .footer-block:nth-child(odd) {
+    margin-left: 0 !important;
+  }
+  .copyright-block {
+    display: none;
   }
 }
 @media (max-width: 540px) {
@@ -1226,7 +1457,138 @@ footer {
     line-height: 1;
     margin: 0.2em 0 0.2em;
   }
+  section {
+    padding: 50px 0;
+  }
+  .concept-img {
+    width: auto;
+  }
+  .concept-img .puzzle-wrap {
+    left: auto;
+    right: 200px;
+  }
+  .concept-img .puzzle-wrap img {
+    width: 200px;
+  }
+  .concept-img .arrow-mobile {
+    top: 105px;
+    left: 0;
+    max-width: 100%;
+  }
+  .concept-img .arrow-mobile img {
+    max-width: 100%;
+  }
+  .concept-img .bulb-wrap {
+    top: 169px;
+    left: 10px;
+  }
+  .concept-img .konzept-wrap {
+    left: 206px;
+    top: 127px;
+  }
+  .input {
+    margin: 0 0 40px;
+  }
+  .input-name,
+  .input-phone {
+    width: 100%;
+    float: none;
+  }
 }
 @media (max-width: 440px) {
-  
+  nav ul li {
+    margin-left: 10px;
+  }
+  nav ul li a {
+    font-size: 0.75em;
+  }
+  .concept-img {
+    height: 485px;
+  }
+  .concept-img .arrow-mobile {
+    display: none;
+  }
+  .concept-img .konzept-wrap {
+    left: 50%;
+    right: auto;
+    top: 150px;
+    margin-left: -64px;
+  }
+  .concept-img .konzept-wrap:before {
+    position: absolute;
+    content: '';
+    display: block;
+    left: 65px;
+    top: -42px;
+    height: 30px;
+    width: 1px;
+    background: #e84c3d;
+  }
+  .concept-img .konzept-wrap:after {
+    position: absolute;
+    content: '';
+    display: block;
+    height: 30px;
+    left: 65px;
+    bottom: -173px;
+    width: 1px;
+    background: #e84c3d;
+  }
+  .concept-img .bulb-wrap {
+    top: 0;
+    left: 50%;
+    margin-left: -32px;
+  }
+  .concept-img .puzzle-wrap {
+    left: 50%;
+    right: auto;
+    top: 340px;
+    margin-left: -130px;
+  }
+  .concept-img .puzzle-wrap img {
+    width: auto;
+  }
+  .concept-block {
+    display: block;
+    width: 75%;
+    float: none;
+    margin: 0 auto 20px !important;
+  }
+  .concept-block .line {
+    display: none;
+  }
+  .concept-block .title {
+    font-size: 1.125em;
+  }
+  .concept-block .text {
+    font-size: 1.125em;
+    line-height: 1.5;
+  }
+  .btn-send {
+    width: 100%;
+  }
+  .input {
+    margin: 0 0 30px;
+  }
+}
+@media (max-width: 360px) {
+  nav ul li:first-child {
+    margin: 0 0 14px;
+  }
+  nav ul li a {
+    font-size: 0.625em;
+  }
+  .crewman-block .photo-wrap {
+    margin: 0 0 20px;
+  }
+  .crewman-block .title {
+    font-size: 1.375em;
+  }
+  .crewman-block .subtitle {
+    font-size: 1.0625em;
+    margin: 0 0 1em;
+  }
+  .crewman-block .section {
+    font-size: 1em;
+  }
 }
