--- a/html/css/style.css
+++ b/html/css/style.css
@@ -161,6 +161,9 @@ section {
   background: #f5f5f5;
   margin: -2px 0 0;
 }
+.first-slider-sect .container {
+  opacity: 0;
+}
 .first-slider-sect .slider {
   display: inline-block;
   width: 48.72%;
@@ -184,6 +187,9 @@ section {
 }
 .swiper-container {
   width: 100%;
+}
+.swiper-slide {
+  cursor: pointer;
 }
 .swiper-slide img {
   max-width: 100%;
@@ -1135,6 +1141,12 @@ footer {
   opacity: 0;
 }
 .scrollTop:active i.active {
+  opacity: 1;
+}
+.animated {
+  opacity: 0;
+}
+.animated.done {
   opacity: 1;
 }
 /****  media  ****/
